---
source: book/tests/snapshot.rs
expression: "let top_50 = (\n  from employees\n  sort salary\n  take 50\n  aggregate [total_salary = sum salary]\n)\n\nfrom top_50      # Starts a new pipeline\n"
---
let top_50 = (
  from employees
  sort salary
  take 50
  aggregate [total_salary = sum salary]
)



from top_50



